--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,12 @@
     flex-direction: row;
 }
 
-.temp-div {
-    border: 2px solid black;
+.photo-grid {
     width: 50%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .input-dialog {
@@ -50,4 +53,38 @@
     border: 1px solid rgba(153, 0, 0, 1.0);
     border-radius: 5px;
     background-color: rgba(153, 0, 0, 0.3);
+}
+
+.photo-card-container {
+    display: flex;
+    flex-direction: column;
+    padding: 2px;
+    border: 2px solid black;
+    border-radius: 5px;
+    width: 250px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+.photo-card-container button {
+    height: 20px;
+    width: 30px;
+    margin-right: 10px;
+}
+
+.photo-card-container img {
+    border-radius: 5px;
+}
+
+.photo-card-info {
+    margin-top: 5px;
+    display: flex;
+    flex-direction: row;
+    width: 180 px;
+}
+
+.photo-card-caption {
+    width: 205px;
+    word-break: normal;
+    overflow: auto;
 }
